# ENTROPYMAX2.0

./: .gitignore  DRAFT_architecture.md  DRAFT_ci_cd.md  DRAFT_client_issues.md  Makefile  Makefile.installer  Makefile.installer.tweaked  README.md  README2.md  SETUP_INSTRUCTIONS.md  backend_readme.md  compile_readme.md  emaxoutput.kml  pyproject.toml  requirements-dev.txt  test.csv  test_sweep
backend/: CMakeLists.txt  README.md
backend/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  emx_cli.vcxproj  emx_cli.vcxproj.filters  entropymax.vcxproj  entropymax.vcxproj.filters  entropymax_backend.sln  parquet_io.vcxproj  parquet_io.vcxproj.filters  run_entropymax.vcxproj  run_entropymax.vcxproj.filters  test_backend.vcxproj  test_backend.vcxproj.filters
backend/build-msvc/emx_cli.dir/Release/: emx_cli.exe.recipe
backend/build-msvc/emx_cli.dir/Release/emx_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/build-msvc/entropymax.dir/Release/entropymax.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
backend/build-msvc/parquet_io.dir/Release/: parquet_io.lib.recipe
backend/build-msvc/parquet_io.dir/Release/parquet_io.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
backend/build-msvc/run_entropymax.dir/Release/: run_entropymax.exe.recipe
backend/build-msvc/run_entropymax.dir/Release/run_entropymax.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  run_entropymax.lastbuildstate
backend/build-msvc/test_backend.dir/Release/: test_backend.exe.recipe
backend/build-msvc/test_backend.dir/Release/test_backend.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
backend/build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
backend/build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/include/: algo.h  backend.h  csv.h  grouping.h  logging.h  metrics.h  parquet.h  preprocess.h  run_entropymax.h  sweep.h  util.h
backend/src/algo/: backend_algo.c  grouping.c  metrics.c  preprocess.c  run_entropymax.c  sweep.c  test_sweep.c
backend/src/algo/cli/: emx_cli.c
backend/src/io/: README.md  clean_csv  convert_csv_to_parquet  convert_csv_to_parquet.py  convert_output_to_parquet.py  csv_reader.c  csv_stub.c  io_pipeline.py  parquet_arrow.cc  parquet_io.cc  parquet_stub.c  parquet_writer.c  postprocess_output.py  prepare_input.py  requirements.txt  run_combine.py  run_combine_execute.c  run_converter  run_converter.py  run_converter_execute  run_converter_execute.c  run_parquet.py  validate_csv_blocks  validate_csv_gps.py  validate_csv_raw.py  verify_csv.py
backend/src/util/: logging_stub.c  util.c
backend/tests/: test_backend.c  verify_parquet.cc
data/: README.md  actual_results.csv  actual_results_converted.csv  input.csv  output.csv
data/parquet/: output.parquet  sample_output_augmented.parquet
data/processed/: coords_map.csv  input_for_runner.csv  input_merged.parquet  sample_output_CORRECT.csv  sample_output_EXPECTED.csv  sample_output_augmented.csv  sample_output_frontend.back_legacy.csv  sample_output_frontend.csv  sample_output_legacy.csv  sample_outputt.parquet
data/raw/: sample_coordinates.csv  sample_input.csv
data/tmp/: input.csv  input_coordinates.csv
docs/: ARCHITECTURE.md  BACKEND.md  CI_CD.md  CLIENT_ISSUES.md  OPEN_ISSUES.md  PORTING_GUIDE.md  QA_PLAN.md  README.md  SAMPLE_API_FORMAT.md
docs/drafts/: DRAFT_architecture.md  DRAFT_ci_cd.md  DRAFT_client_issues.md  README2.md
excelScript/: README.md  export_hours.py  export_minutes.py  main.py  requirements.txt
excelScript/meetings/: meeting_2025-09-10.md  minutes_readme.md
excelScript/output/: Booked_Hours_All.xlsx  TimeSheet_Group31_Wk8.xlsx
excelScript/templates/: Booked_Hours_YourName.xlsx  TimeSheet_GroupX_WkY.xlsx
frontend/: README.md  build_macos.sh  build_win.sh  git-sync.sh  interactive_map.html  macos.spec  main.py  map.html  requirements.txt  run_entropymax  sample_data.py  test.csv  win.spec
frontend/components/: __init__.py  arrow_tool.py  chart_widget.py  circle_selection_tool.py  control_panel.py  control_panel_minimal.py  distance_tool.py  fullscreen_chart_widget.py  fullscreen_map_sample_widget.py  fullscreen_viewer.py  group_detail_popup.py  interactive_map_widget.py  map_tools_base.py  map_widget.py  module_preview_card.py  sample_list_widget.py  selected_psd_widget.py  settings_dialog.py  simple_map_sample_widget.py  standalone_window.py  visualization_settings.py
frontend/data/: sample_coordinates.csv  sample_input.csv
frontend/docs/: architecture-overview.md  packaging-guide.md
frontend/help/: __init__.py  format_examples_dialog.py  user_guide_dialog.py  validation_rules_dialog.py
frontend/test/: test_csv.py  test_custom_checkbox_sort.py  test_group_details.py  test_log_axis.py  test_validation.py
frontend/utils/: __init__.py  cache_paths.py  (+15 more)
icons/: emaxdark.icns  emaxlight.icns
installer/: EntropyMax.nsi  README.md
legacy/: EntropyMax.vbp  Form1.frm  Module1.bas  backend_readme.md  code_analysis.md  legacy_readme.md  readme.md
scripts/: augment_sample_output.py  build_backend.sh  compare_csvs.py  convert_legacy_groupings.py  convert_legacy_output.py  dev_run.sh  input_from_output.py  inspect_parquet.py  parquet_to_csv.py  validate_output_metrics.py
(+22 files in other folders)
