[project]
name = "entropymax2"
version = "0.0.0"
description = "Development config for EntropyMax 2.0 (tooling & tests)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-qt>=4.4",
  "coverage>=7.6",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests/python",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "legacy",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.coverage.run]
branch = true
source = [
  "src/app",
  "frontend",
]

